# server

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  index.html  make.cmd  makefile  package.json  readme.md  server.ini  solution.cmd
html/: index.html  index.js  main.svelte
html/fonts/: Roboto.css
html/res/: browsers.afdesign
html/src/: App.svelte  Header.svelte
include/net/: async.h  error.h  handle.h  http.h  server.h  service.h  socket.h  tls.h  utility.h
include/net/tls/: server.h  types.h
res/: format.cmake  responses.html  toolchain.cmake
res/cmake/: tzdata.cmake  tzdata.cpp
res/config/: launch.json.in  tasks.json.in
res/debian/: postinst.in  postrm.in  prerm.in
src/: common.cpp  common.hpp  main.cpp  main.rc  main.svelte
src/app/: config.cpp  config.hpp
src/net/: address.h  async.cpp  event.h  http.cpp  server.cpp  server.hpp  session.cpp  session.hpp  socket.cpp  tls.cpp  utility.cpp
src/net/http/: parser.cpp  parser.h  parser_v1.h  parser_v2.h
src/net/tls/: server.cpp
src/net/unix/: server.cpp  service.cpp  socket.cpp
src/net/windows/: server.cpp  service.cpp  socket.cpp
